# robotlab

./: .gitignore  .travis.yml  LICENSE  README.md  anaconda-project-lock.yml  anaconda-project.yml  apr  apr.bat  azure-pipelines.yml  environment.yml
ci/: env-combine.yml  env-lab.yml  env-main.yml  env-noarch.yml  env-qa.yml  job.combine.yml  job.deploy.yml  job.lab.yml  job.main.yml  job.min.yml  job.noarch-test.yml  job.noarch.yml  job.qa.yml  job.release.yml  job.robotlab.yml  job.selftest.yml  job.test.yml  job.unix-like.yml  job.win-test.yml  job.win.yml  steps.browser.yml  steps.chromedriver.yml  steps.common.yml  steps.conda.robot.yml  steps.conda.test.yml  steps.conda.yml  steps.jupyterlibary.yml  steps.jupyterlibrary.yml  steps.restore.yml
constructor/: build.py  construct.yaml.in  post_install.bat  post_install.sh
constructor/ExoRobot/: construct.yaml.in
constructor/MiniRobot/: construct.yaml.in
constructor/RobotLab/: construct.yaml.in  post_install.bat
recipes/chromedriver/: meta.yaml
recipes/defusedxml/: meta.yaml
recipes/flex-swagger/: meta.yaml
recipes/genson/: meta.yaml
recipes/jsonpath-ng/: meta.yaml
recipes/jsonpointer/: meta.yaml
robotlab/: LICENSE  MANIFEST.in  README.md  setup.cfg
robotlab/src/robotlab/: __init__.py  _version.py  examples.py  labapp.py  labextensionapp.py  launch.py  paths.py  scripts.py  shortcuts.py  tutorial.py
robotlab/src/robotlab/icons/: build_icons.sh  lab.icns  shell.icns
scripts/: __init__.py  build.py  combine.py  integrity.py  lint.py  rearch.py  test.py
tests/: Installer.robot
(+78 files in other folders)
