[metadata]
name = robotlab
version = 0.7.1
description = A pre-configured JupyterLab for demonstrating robotkernel
long_description = file: README.md
url = https://github.com/bollwyvl/robotlab
author = Nick Bollweg
author_email = nick.bollweg@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Interpreter
    Shell
    Testing
    Web
    Jupyter
    JupyterLab
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options.entry_points]
console_scripts =
    robotlab = robotlab.labapp:main
    robotlab-extension = robotlab.labextensionapp:main
    robotlab-examples = robotlab.examples:copy_robotkernel_examples

[options]
install_requires =
    jupyterlab
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src
